--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@ html {
     display: flex;
     flex-direction: column;
     min-height: 100%;
+    max-width: 100vw;
 }
 
 body {
@@ -24,7 +25,7 @@ body {
     flex-grow: 1;
     font-family: 'Roboto Mono', monospace;
     justify-content: space-between;
-    padding: 20px;
+    margin: 10px;
 }
 
 header {
@@ -52,7 +53,7 @@ footer {
     height: 20px;
     pointer-events: none;
     position: absolute;
-    transition: all 350ms ease-out, opacity 15  0ms ease-out;
+    transition: all 350ms ease-out;
     width: 20px;
     z-index: 1; 
 }
@@ -62,9 +63,24 @@ a {
     color: inherit;
 }
 
-.link-rojo:hover {
+.link, .logo {
+    padding: 10px 16px;
+    line-height: 1;
+}
+
+.logo:hover {
+    color: var(--verde);
+}
+
+.rojo:hover {
     background-color: var(--rojo);
     color: var(--blanco);
+}
+
+.azul:hover {
+    background-color: var(--azul);
+    color: var(--blanco);
+    border-radius: 40px;
 }
 
 .draggable {
