--- a/css/styles.css
+++ b/css/styles.css
@@ -5,9 +5,9 @@
 } */
 
 :root {
-    --rojo: #FF0000;
-    --blanco: white;
     --azul: #0000FF;
+    --blanco: white;
+    --rojo: #FF0000;
     --verde: #228B24;
 }
 
@@ -40,32 +40,32 @@ footer {
 #main-cursor {
     background-color: var(--rojo);
     border-radius: 50%;
-    height: 5px;
+    height: 7px;
     pointer-events: none;
     position: absolute;
-    width: 5px;
+    width: 7px;
     z-index: 1;
 }
 
 #follow-cursor {
     background-color: var(--rojo);
     border-radius: 50%;
-    height: 20px;
+    height: 25px;
     pointer-events: none;
     position: absolute;
-    transition: all 350ms ease-out;
-    width: 20px;
+    transition: all 1.5s cubic-bezier(.19,1,.22,1), opacity 0.4s ease-in-out;
+    width: 25px;
     z-index: 1; 
 }
 
 a {
-    text-decoration: none;
     color: inherit;
+    text-decoration: none;
 }
 
 .link, .logo {
-    padding: 10px 16px;
     line-height: 1;
+    padding: 10px 16px;
 }
 
 .logo:hover {
@@ -79,8 +79,8 @@ a {
 
 .azul:hover {
     background-color: var(--azul);
-    color: var(--blanco);
     border-radius: 40px;
+    color: var(--blanco);
 }
 
 .draggable {
@@ -89,13 +89,13 @@ a {
 }
 
 .draggable img {
-    max-width: 350px;
-    max-height: 350px;
     cursor: grab;
+    max-height: 350px;
+    max-width: 350px;
 }
-.draggable img:hover {
-    -webkit-animation: vibrate-2 0.3s linear 3 both;
-    animation: vibrate-2 0.3s linear 3 both;
+.vibrar:hover {
+    -webkit-animation: vibrate-2 0.3s linear 2.5 both;
+    animation: vibrate-2 0.3s linear 2.5 both;
 }
 
 .main-home {
@@ -104,9 +104,39 @@ a {
 }
 
 .home-photo {
+    align-items: center;
     display: flex;
     justify-content: center;
+}
+
+.main-catalogo {
+    flex-grow: 2;
+}
+
+.criteria {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    column-gap: 2rem;
+}
+
+.grilla-fotos {
+    padding: 80px 20px 0px;
+    display: flex;
     align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    gap: 100px;
+}
+
+.grilla-fotos img{
+    max-height: 200px;
+}
+
+button {
+    border: 0;
+    padding: 0;
+    background-color: transparent;
 }
 
 /* ----------------------------------------------
