--- a/css/styles.css
+++ b/css/styles.css
@@ -1,76 +1,78 @@
-@import url(https://fonts.bunny.net/css?family=roboto-mono:400);@import url(https://fonts.bunny.net/css?family=roboto-mono:400,400i);
+@import url(https://fonts.bunny.net/css?family=roboto-mono:400);
+@import url(https://fonts.bunny.net/css?family=roboto-mono:400,400i);
 
 /* html {
     height: 100vh;
 } */
 
 :root {
-    --azul: #0000FF;
-    --blanco: white;
-    --rojo: #FF0000;
-    --verde: #228B24;
+  --azul: #0000ff;
+  --blanco: white;
+  --rojo: #ff0000;
+  --verde: #228b24;
 }
 
 html {
-    display: flex;
-    flex-direction: column;
-    min-height: 100%;
-    max-width: 100vw;
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+  max-width: 100vw;
 }
 
 body {
-    cursor: none;
-    display: flex;
-    flex-direction: column;
-    flex-grow: 1;
-    font-family: 'Roboto Mono', monospace;
-    justify-content: space-between;
-    margin: 10px;
+  cursor: none;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  font-family: "Roboto Mono", monospace;
+  justify-content: space-between;
+  margin: 10px;
 }
 
 header {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 footer {
-    align-self: flex-end;
+  align-self: flex-end;
 }
 
 #main-cursor {
-    background-color: var(--rojo);
-    border-radius: 50%;
-    height: 7px;
-    pointer-events: none;
-    position: absolute;
-    width: 7px;
-    z-index: 1;
+  background-color: var(--rojo);
+  border-radius: 50%;
+  height: 7px;
+  pointer-events: none;
+  position: absolute;
+  width: 7px;
+  z-index: 1;
 }
 
 #follow-cursor {
-    background-color: var(--rojo);
-    border-radius: 50%;
-    height: 25px;
-    pointer-events: none;
-    position: absolute;
-    transition: all 1.5s cubic-bezier(.19,1,.22,1), opacity 0.4s ease-in-out;
-    width: 25px;
-    z-index: 1; 
+  background-color: var(--rojo);
+  border-radius: 50%;
+  height: 25px;
+  pointer-events: none;
+  position: absolute;
+  transition: all 1.5s cubic-bezier(0.19, 1, 0.22, 1), opacity 0.4s ease-in-out;
+  width: 25px;
+  z-index: 1;
 }
 
 a {
-    color: inherit;
-    text-decoration: none;
+  color: inherit;
+  text-decoration: none;
 }
 
-.link, .logo {
-    line-height: 1;
-    padding: 10px 16px;
-    z-index: 200;
+.link,
+.logo {
+  line-height: 1;
+  padding: 10px 16px;
+  z-index: 200;
 }
 
 .logo:hover {
-    color: var(--verde);
+  color: var(--verde);
 }
 
 footer {
@@ -78,73 +80,90 @@ footer {
 }
 
 .rojo:hover {
-    background-color: var(--rojo);
-    color: var(--blanco);
+  background-color: var(--rojo);
+  color: var(--blanco);
 }
 
 .azul:hover {
-    background-color: var(--azul);
-    border-radius: 40px;
-    color: var(--blanco);
+  background-color: var(--azul);
+  border-radius: 40px;
+  color: var(--blanco);
 }
 
 .draggable {
-    margin: 0 auto;
-    z-index: 2;
+  margin: 0 auto;
+  z-index: 2;
 }
 
 .draggable img {
-    cursor: grab;
-    max-height: 350px;
-    max-width: 350px;
+  cursor: grab;
+  max-height: 350px;
+  max-width: 350px;
 }
 
 .vibrar:hover {
-    -webkit-animation: vibrate-2 0.5s linear infinite both;
-    animation: vibrate-2 0.5s linear infinite both;
+  -webkit-animation: vibrate-2 0.5s linear infinite both;
+  animation: vibrate-2 0.5s linear infinite both;
 }
 
 .main-home {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  flex-grow: 2;
 }
 
 .home-photo {
-    align-items: center;
-    display: flex;
-    justify-content: center;
+  align-items: center;
+  display: flex;
+  justify-content: center;
 }
 
 .main-catalogo {
-    padding: 40px 100px;
-    flex-grow: 2;
+  padding: 40px 100px;
+  flex-grow: 2;
 }
 
 .filters-list {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    column-gap: 2rem;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  column-gap: 2rem;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  transition: color 300ms ease-in 1s;
+}
+
+.filter:hover {
+  color: var(--rojo);
+}
+
+button {
+  border: 0;
+  padding: 7px;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.current {
+  color: var(--rojo);
 }
 
 .grilla-fotos {
-    align-items: center;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 2rem;
-    justify-content: center;
-    padding-top: 80px;
-    /* display: grid;
+  align-items: center;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2rem;
+  justify-content: center;
+  padding-top: 80px;
+  /* display: grid;
     column-gap: 2rem;
     row-gap: 2rem;
     align-items: center;
     justify-items: center;
     justify-content: space-between;
     grid-template-columns: repeat(auto-fit, minmax(min(200px, 100%), 1fr)); */
-    }
+}
 
 /* para mejorar el comportamiento de la última fila */
 /* .grilla-fotos::after {
@@ -153,38 +172,27 @@ footer {
   } */
 
 .grilla-fotos img {
-    max-height: 180px;
-    /* pointer-events: none; */
-    /* max-width: 100%;
+  max-height: 180px;
+  /* pointer-events: none; */
+  /* max-width: 100%;
     min-width: 0; */
 }
 
-button {
-    border: 0;
-    padding: 7px;
-    background-color: transparent;
-    cursor: pointer;
-}
-
-.current {
-    color: var(--rojo);
-}
-
 .fade-in {
-	-webkit-animation: fade-in 1.5s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
-	        animation: fade-in 1.5s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+  -webkit-animation: fade-in 1.5s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+  animation: fade-in 1.5s cubic-bezier(0.39, 0.575, 0.565, 1) both;
 }
 
 .reload-gallery {
-  -webkit-animation: fade-in 200ms cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
-  animation: fade-in 200ms cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+  -webkit-animation: fade-in 200ms cubic-bezier(0.39, 0.575, 0.565, 1) both;
+  animation: fade-in 200ms cubic-bezier(0.39, 0.575, 0.565, 1) both;
 }
 
 .tooltip {
   background: var(--blanco);
   border-radius: 4px;
   border: 1px solid #b3c9ce;
-  box-shadow: 3px 3px 3px rgba(0, 0, 0, .3);
+  box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.3);
   color: #333;
   font-size: 12px;
   font-style: italic;
@@ -192,8 +200,6 @@ button {
   position: fixed;
   text-align: center;
 }
-
-
 
 /* ----------------------------------------------
  * Generated by Animista on 2022-7-17 22:2:23
@@ -207,74 +213,72 @@ button {
  * animation vibrate-2
  * ----------------------------------------
  */
- @-webkit-keyframes vibrate-2 {
-    0% {
-      -webkit-transform: translate(0);
-              transform: translate(0);
-    }
-    20% {
-      -webkit-transform: translate(2px, -2px);
-              transform: translate(2px, -2px);
-    }
-    40% {
-      -webkit-transform: translate(2px, 2px);
-              transform: translate(2px, 2px);
-    }
-    60% {
-      -webkit-transform: translate(-2px, 2px);
-              transform: translate(-2px, 2px);
-    }
-    80% {
-      -webkit-transform: translate(-2px, -2px);
-              transform: translate(-2px, -2px);
-    }
-    100% {
-      -webkit-transform: translate(0);
-              transform: translate(0);
-    }
+@-webkit-keyframes vibrate-2 {
+  0% {
+    -webkit-transform: translate(0);
+    transform: translate(0);
   }
-  @keyframes vibrate-2 {
-    0% {
-      -webkit-transform: translate(0);
-              transform: translate(0);
-    }
-    20% {
-      -webkit-transform: translate(2px, -2px);
-              transform: translate(2px, -2px);
-    }
-    40% {
-      -webkit-transform: translate(2px, 2px);
-              transform: translate(2px, 2px);
-    }
-    60% {
-      -webkit-transform: translate(-2px, 2px);
-              transform: translate(-2px, 2px);
-    }
-    80% {
-      -webkit-transform: translate(-2px, -2px);
-              transform: translate(-2px, -2px);
-    }
-    100% {
-      -webkit-transform: translate(0);
-              transform: translate(0);
-    }
+  20% {
+    -webkit-transform: translate(2px, -2px);
+    transform: translate(2px, -2px);
   }
-  
+  40% {
+    -webkit-transform: translate(2px, 2px);
+    transform: translate(2px, 2px);
+  }
+  60% {
+    -webkit-transform: translate(-2px, 2px);
+    transform: translate(-2px, 2px);
+  }
+  80% {
+    -webkit-transform: translate(-2px, -2px);
+    transform: translate(-2px, -2px);
+  }
+  100% {
+    -webkit-transform: translate(0);
+    transform: translate(0);
+  }
+}
+@keyframes vibrate-2 {
+  0% {
+    -webkit-transform: translate(0);
+    transform: translate(0);
+  }
+  20% {
+    -webkit-transform: translate(2px, -2px);
+    transform: translate(2px, -2px);
+  }
+  40% {
+    -webkit-transform: translate(2px, 2px);
+    transform: translate(2px, 2px);
+  }
+  60% {
+    -webkit-transform: translate(-2px, 2px);
+    transform: translate(-2px, 2px);
+  }
+  80% {
+    -webkit-transform: translate(-2px, -2px);
+    transform: translate(-2px, -2px);
+  }
+  100% {
+    -webkit-transform: translate(0);
+    transform: translate(0);
+  }
+}
 
- @-webkit-keyframes fade-in {
-    0% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 1;
-    }
+@-webkit-keyframes fade-in {
+  0% {
+    opacity: 0;
   }
-  @keyframes fade-in {
-    0% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 1;
-    }
+  100% {
+    opacity: 1;
   }
-  
+}
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
