--- a/css/styles.css
+++ b/css/styles.css
@@ -138,6 +138,10 @@ footer {
   color: var(--rojo);
 }
 
+.filter:focus-visible {
+  outline: 2px solid var(--rojo);
+}
+
 button {
   border: 0;
   padding: 7px;
