--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,7 @@ body {
   font-family: "Roboto Mono", monospace;
   justify-content: space-between;
   margin: 10px;
+  overflow: hidden;
 }
 
 header {
@@ -45,7 +46,7 @@ footer {
   pointer-events: none;
   position: absolute;
   width: 7px;
-  z-index: 1;
+  z-index: 250;
 }
 
 #follow-cursor {
@@ -56,7 +57,7 @@ footer {
   position: absolute;
   transition: all 1.5s cubic-bezier(0.19, 1, 0.22, 1), opacity 0.4s ease-in-out;
   width: 25px;
-  z-index: 1;
+  z-index: 250;
 }
 
 a {
@@ -160,6 +161,8 @@ button {
   gap: 2rem;
   justify-content: center;
   padding-top: 80px;
+  -webkit-animation: fade-in 1.5s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+  animation: fade-in 1.5s cubic-bezier(0.39, 0.575, 0.565, 1) both;
   /* display: grid;
     column-gap: 2rem;
     row-gap: 2rem;
@@ -182,14 +185,9 @@ button {
     min-width: 0; */
 }
 
-.fade-in {
-  -webkit-animation: fade-in 1.5s cubic-bezier(0.39, 0.575, 0.565, 1) both;
-  animation: fade-in 1.5s cubic-bezier(0.39, 0.575, 0.565, 1) both;
-}
-
 .reload-gallery {
-  -webkit-animation: fade-in 200ms cubic-bezier(0.39, 0.575, 0.565, 1) both;
-  animation: fade-in 200ms cubic-bezier(0.39, 0.575, 0.565, 1) both;
+  -webkit-animation: fade-in 500ms cubic-bezier(0.39, 0.575, 0.565, 1) both;
+  animation: fade-in 500ms cubic-bezier(0.39, 0.575, 0.565, 1) both;
 }
 
 .tooltip {
@@ -203,6 +201,67 @@ button {
   padding: 10px 20px;
   position: fixed;
   text-align: center;
+  z-index: 300;
+}
+
+#carousel {
+  background-color: var(--blanco);
+  display: none;
+  opacity: 0;
+  height: 100%;
+  inset: 0;
+  position: fixed;
+  z-index: 210;
+  width: auto;
+}
+
+#slider {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 3rem;
+  height: 100%;
+  width: auto;
+}
+
+#slider button {
+  font-size: 2rem;
+  padding: 2rem;
+}
+
+.current-slide {
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.current-slide img {
+  height: 70%;
+}
+
+#carousel-close {
+  position: absolute;
+  padding: 1rem 2rem;
+  line-height: 1;
+  right: 0;
+  top: 0;
+  z-index: 5;
+  font-size: 3rem;
+}
+
+.carousel-button:hover {
+  -webkit-animation: pulsate-fwd 0.7s ease-in-out infinite both;
+  animation: pulsate-fwd 0.7s ease-in-out infinite both;
+}
+
+.fade-in {
+  -webkit-animation: fade-in 0.3s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+  animation: fade-in 0.3s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+}
+
+.fade-out {
+  -webkit-animation: fade-out 200ms ease-out both;
+  animation: fade-out 200ms ease-out both;
 }
 
 /* ----------------------------------------------
@@ -212,38 +271,7 @@ button {
  * w: http://animista.net, t: @cssanimista
  * ---------------------------------------------- */
 
-/**
- * ----------------------------------------
- * animation vibrate-2
- * ----------------------------------------
- */
 @-webkit-keyframes vibrate-2 {
-  0% {
-    -webkit-transform: translate(0);
-    transform: translate(0);
-  }
-  20% {
-    -webkit-transform: translate(2px, -2px);
-    transform: translate(2px, -2px);
-  }
-  40% {
-    -webkit-transform: translate(2px, 2px);
-    transform: translate(2px, 2px);
-  }
-  60% {
-    -webkit-transform: translate(-2px, 2px);
-    transform: translate(-2px, 2px);
-  }
-  80% {
-    -webkit-transform: translate(-2px, -2px);
-    transform: translate(-2px, -2px);
-  }
-  100% {
-    -webkit-transform: translate(0);
-    transform: translate(0);
-  }
-}
-@keyframes vibrate-2 {
   0% {
     -webkit-transform: translate(0);
     transform: translate(0);
@@ -284,5 +312,51 @@ button {
   }
   100% {
     opacity: 1;
+  }
+}
+
+@-webkit-keyframes pulsate-fwd {
+  0% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+  50% {
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+  }
+  100% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+}
+@keyframes pulsate-fwd {
+  0% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+  50% {
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+  }
+  100% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+}
+
+@-webkit-keyframes fade-out {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@keyframes fade-out {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
   }
 }
