--- a/css/styles.css
+++ b/css/styles.css
@@ -185,7 +185,7 @@ a {
 
 .main-home {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: 1fr 3fr 1fr;
   flex-grow: 2;
 }
 
@@ -196,23 +196,20 @@ a {
 }
 
 .main-catalogo {
-  padding: 40px 80px;
+  padding: 40px 0;
   flex-grow: 2;
 }
 
 .filters-list {
-  width: 100%;
   display: flex;
   justify-content: center;
   column-gap: 1rem;
   list-style-type: none;
   margin: 0;
   padding: 10px 0px;
-  position: sticky;
-  top: 0px;
-  z-index: 200;
-  background-color: var(--blanco);
 }
+
+/* box-shadow: 0 2px rgba(0, 0, 0, 0.1); */
 
 .filter {
   padding: 10px 16px;
@@ -242,36 +239,16 @@ button {
 }
 
 .grilla-fotos {
-  -webkit-animation: fade-in 1.5s cubic-bezier(0.39, 0.575, 0.565, 1) both;
-  animation: fade-in 1.5s cubic-bezier(0.39, 0.575, 0.565, 1) both;
-  padding-top: 80px;
-}
-
-/* version flexbox */
-/* .grilla-fotos {
-  align-items: center;
-  display: flex;
-  flex-wrap: wrap;
-  gap: 3rem;
-  justify-content: space-between;
-} */
-
-/* para mejorar el comportamiento de la última fila */
-/* .grilla-fotos::after {
-    content: "";
-    flex: auto;
-  } */
-
-/* version grid */
-.grilla-fotos {
+  padding: 80px;
   display: grid;
   column-gap: 2rem;
   row-gap: 2rem;
   align-items: center;
   justify-items: center;
   justify-content: space-between;
-  /* grid-template-columns: repeat(auto-fit, minmax(min(200px, 100%), 1fr)); */
   grid-template-columns: repeat(auto-fill, minmax(min(10rem, 100%), 1fr));
+  -webkit-animation: fade-in 1.5s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+  animation: fade-in 1.5s cubic-bezier(0.39, 0.575, 0.565, 1) both;
 }
 
 .foto {
