--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,11 @@ html {
   max-width: 100vw;
 }
 
+::selection {
+  color: var(--blanco);
+  background: var(--violeta);
+}
+
 body {
   /* font-family: "Roboto Mono", monospace; */
   cursor: none;
@@ -53,7 +58,7 @@ header {
 }
 
 footer {
-  align-self: flex-end;
+  align-self: flex-start;
   z-index: 200;
   position: sticky;
   bottom: 10px;
@@ -64,7 +69,6 @@ footer {
 } */
 
 #main-cursor {
-  /* background-color: var(--amarillo); */
   background-color: var(--rojo);
   border-radius: 50%;
   height: 7px;
@@ -76,10 +80,6 @@ footer {
 
 #follow-cursor {
   background-color: var(--rojo);
-  /* background-color: var(--amarillo); */
-  /* border-radius: 50%;
-  height: 25px;
-  width: 25px; */
   pointer-events: none;
   position: absolute;
   transition: all 1.5s cubic-bezier(0.19, 1, 0.22, 1), opacity 0.4s ease-in-out;
@@ -167,15 +167,15 @@ a {
   color: var(--azul);
 }
 
-.draggable {
+/* .draggable {
   margin: 0 auto;
   z-index: 2;
-}
+} */
 
-.draggable img {
+.body-home img {
   cursor: grab;
-  max-height: 350px;
-  max-width: 350px;
+  max-height: 15rem;
+  max-width: 15rem;
 }
 
 .vibrar:hover {
@@ -184,16 +184,40 @@ a {
 }
 
 .main-home {
-  display: grid;
-  grid-template-columns: 1fr 3fr 1fr;
   flex-grow: 2;
+  /* experimento */
+  display: grid;
+  grid-template-columns: 1fr 2fr 2fr;
+  grid-template-rows: 2fr 3fr;
+  gap: 1rem;
 }
 
-.home-photo {
-  align-items: center;
-  display: flex;
-  justify-content: center;
+.home-photo:nth-child(1) {
+  grid-column: 1/3;
+  justify-self: center;
+  align-self: end;
 }
+
+.home-photo:nth-child(3) {
+  align-self: center;
+  justify-self: end;
+}
+
+.home-photo:nth-child(4) {
+  justify-self: center;
+  align-self: end;
+}
+
+.home-photo:nth-child(5) {
+  justify-self: end;
+  align-self: baseline;
+}
+
+/* .home-photo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+} */
 
 .main-catalogo {
   padding: 40px 0;
@@ -239,7 +263,7 @@ button {
 }
 
 .grilla-fotos {
-  padding: 80px;
+  padding: 60px 100px;
   display: grid;
   column-gap: 2rem;
   row-gap: 2rem;
