--- a/css/styles.css
+++ b/css/styles.css
@@ -191,7 +191,7 @@ a {
 }
 
 .tiembla:hover {
-  animation: tiembla 1.3s ease 0s 1 normal forwards;
+  animation: tiembla 2s ease 0s 1 normal forwards;
 }
 
 .main-home {
@@ -199,7 +199,7 @@ a {
   /* experimento */
   display: grid;
   grid-template-columns: 1fr 2fr 2fr;
-  grid-template-rows: 2fr 3fr;
+  grid-template-rows: 1fr 1fr;
   gap: 1rem;
   margin: 20px 30px;
 }
@@ -207,7 +207,12 @@ a {
 .home-photo:nth-child(1) {
   grid-column: 1/3;
   justify-self: center;
-  align-self: end;
+  align-self: center;
+}
+
+.home-photo:nth-child(2) {
+  justify-self: baseline;
+  align-self: baseline;
 }
 
 .home-photo:nth-child(3) {
@@ -216,20 +221,14 @@ a {
 }
 
 .home-photo:nth-child(4) {
-  justify-self: center;
-  align-self: end;
-}
-
-.home-photo:nth-child(5) {
   justify-self: end;
   align-self: baseline;
 }
 
-/* .home-photo {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-} */
+.home-photo:nth-child(5) {
+  justify-self: end;
+  align-self: center;
+}
 
 .main-catalogo {
   padding: 40px 0;
