--- a/css/styles.css
+++ b/css/styles.css
@@ -44,7 +44,7 @@ body {
   flex-grow: 1;
   font-family: "supplyregular";
   justify-content: space-between;
-  margin: 10px 0px;
+  margin: 0.8em 0;
   overflow-x: hidden;
 }
 
@@ -55,30 +55,34 @@ body {
 header {
   display: flex;
   justify-content: space-between;
-  margin: 0 20px;
+  margin: 0 1em;
 }
 
 footer {
   align-self: flex-start;
-  z-index: 200;
-  position: sticky;
-  bottom: 20px;
-  margin: 0 20px 10px;
+  bottom: 1.6em;
   line-height: 1;
+  margin: 0 1em 0.8em;
+  position: sticky;
+  z-index: 200;
 }
 
 /* .main-home #main-cursor {
     background-color: var(--rojo);
   } */
 
-#main-cursor {
+#main-cursor,
+#follow-cursor {
   background-color: var(--rojo);
-  border-radius: 50%;
-  height: 7px;
+  z-index: 250;
   pointer-events: none;
   position: absolute;
+  border-radius: 50%;
+}
+
+#main-cursor {
+  height: 7px;
   width: 7px;
-  z-index: 250;
 }
 
 .flecha {
@@ -91,15 +95,10 @@ footer {
 }
 
 #follow-cursor {
-  background-color: var(--rojo);
-  pointer-events: none;
-  position: absolute;
   transition: all 1.5s cubic-bezier(0.19, 1, 0.22, 1), opacity 0.4s ease-in-out;
-  z-index: 250;
 }
 
 #follow-cursor:not(.main-catalogo) {
-  border-radius: 50%;
   height: 20px;
   width: 20px;
 }
@@ -131,7 +130,9 @@ a {
   position: relative;
 }
 
-.logo:hover {
+.logo:hover,
+.rojo:hover,
+.azul:hover:not(.catalogo) {
   color: var(--blanco);
 }
 
@@ -156,23 +157,22 @@ a {
 
 .link {
   line-height: 1;
-  padding: 10px 16px;
+  padding: 0.6em 1em;
   z-index: 200;
   transition: background-color 0.2s ease, color 0.2s ease;
 }
 
 .rojo:hover {
   background-color: var(--rojo);
-  color: var(--blanco);
 }
 
 .azul {
-  border-radius: 40px;
+  /* border-radius: 40px; */
+  border-radius: 3em;
 }
 
-.azul:hover {
+.azul:hover:not(.catalogo) {
   background-color: var(--azul);
-  color: var(--blanco);
 }
 
 .catalogo {
@@ -186,22 +186,25 @@ a {
 
 .body-home img {
   cursor: grab;
-  max-height: 15rem;
-  max-width: 15rem;
+  max-height: 15em;
+  max-width: 15em;
 }
 
 .tiembla:hover {
   animation: tiembla 2s ease 0s 1 normal forwards;
 }
 
+main:not(.main-catalogo) {
+  margin: 1em 2em;
+  padding: 0;
+}
+
 .main-home {
   flex-grow: 2;
-  /* experimento */
   display: grid;
   grid-template-columns: 1fr 2fr 2fr;
   grid-template-rows: 1fr 1fr;
-  gap: 1rem;
-  margin: 20px 30px;
+  gap: 1em;
 }
 
 .home-photo:nth-child(1) {
@@ -231,7 +234,7 @@ a {
 }
 
 .main-catalogo {
-  padding: 40px 0;
+  padding: 2.5em 0;
   flex-grow: 2;
 }
 
@@ -241,7 +244,7 @@ a {
   column-gap: 1rem;
   list-style-type: none;
   margin: 0;
-  padding: 10px 0px;
+  padding: 1em 0;
 }
 
 .filters-nav {
@@ -249,7 +252,7 @@ a {
   z-index: 205;
   display: grid;
   grid-template-columns: 1fr 2fr 1fr;
-  padding: 0 20px;
+  padding: 0 1em;
   align-items: center;
   transition: box-shadow 0.3s ease;
 }
@@ -271,7 +274,7 @@ a {
 }
 
 .filter {
-  padding: 10px 16px;
+  padding: 0.6em 1em;
   cursor: none;
   transition: background-color 0.2s ease, color 0.2s ease;
   border-radius: 40px;
@@ -298,7 +301,7 @@ button {
 }
 
 .grilla-fotos {
-  padding: 60px 140px;
+  padding: 4em 8em;
   display: grid;
   column-gap: 2rem;
   row-gap: 2rem;
@@ -319,14 +322,9 @@ button {
 .foto img {
   max-width: 100%;
   height: auto;
-  max-height: 22vh;
+  max-height: 10em;
   cursor: zoom-in;
 }
-
-/* .reload-gallery {
-    -webkit-animation: fade-in 500ms cubic-bezier(0.39, 0.575, 0.565, 1) both;
-    animation: fade-in 500ms cubic-bezier(0.39, 0.575, 0.565, 1) both;
-  } */
 
 .tooltip {
   background: var(--blanco);
@@ -369,33 +367,34 @@ button {
 }
 
 .slide-wrapper {
-  height: 100%;
   display: flex;
+  height: 100%;
   align-items: center;
 }
 
 .slide-wrapper img {
+  height: auto;
   max-height: 80%;
   max-width: 100%;
-  height: auto;
 }
 
 #carousel-close {
+  background: url(../close-carousel.svg) center no-repeat;
+  background-size: 2rem;
+  cursor: pointer;
+  height: 2rem;
+  padding: 2rem;
   position: absolute;
-  padding: 1.5rem 2rem;
-  line-height: 0.5;
   right: 0;
   top: 0;
+  transition: transform 1.2s cubic-bezier(0.19, 1, 0.22, 1);
+  width: 2rem;
   z-index: 5;
-  font-size: 5rem;
-  color: var(--azul);
 }
 
-#carousel-close:hover {
-  /* -webkit-animation: wobble-hor-top 0.8s both;
-  animation: wobble-hor-top 0.8s both; */
-  animation: tiembla 1s ease 0s 1 normal forwards;
-}
+/* #carousel-close:hover {
+  transform: rotate(-90deg);
+} */
 
 /* .carousel-navigation:hover {
     -webkit-animation: pulsate-fwd 0.7s ease-in-out infinite both;
@@ -423,11 +422,11 @@ button {
 
 .main-info {
   display: grid;
-  grid-template-columns: 1fr 1fr;
   align-items: center;
-  flex-grow: 2;
-  padding: 0 16px;
   column-gap: 2rem;
+  flex-grow: 2;
+  grid-template-columns: 1fr 1fr;
+  padding: 0 16px;
 }
 
 .foto-bio {
@@ -436,8 +435,8 @@ button {
 }
 
 .main-info img {
-  max-width: 60%;
   height: auto;
+  max-width: 60%;
 }
 
 #mail {
@@ -547,78 +546,5 @@ button {
   }
   100% {
     opacity: 0;
-  }
-}
-
-/* ----------------------------------------------
-  * Generated by Animista on 2022-7-27 17:20:33
-  * Licensed under FreeBSD License.
-  * See http://animista.net/license for more info. 
-  * w: http://animista.net, t: @cssanimista
-  * ---------------------------------------------- */
-
-/**
-  * ----------------------------------------
-  * animation wobble-hor-top
-  * ----------------------------------------
-  */
-
-@-webkit-keyframes wobble-hor-top {
-  0%,
-  100% {
-    -webkit-transform: translateX(0%);
-    transform: translateX(0%);
-    -webkit-transform-origin: 50% 50%;
-    transform-origin: 50% 50%;
-  }
-  15% {
-    -webkit-transform: translateX(-30px) rotate(6deg);
-    transform: translateX(-30px) rotate(6deg);
-  }
-  30% {
-    -webkit-transform: translateX(15px) rotate(-6deg);
-    transform: translateX(15px) rotate(-6deg);
-  }
-  45% {
-    -webkit-transform: translateX(-15px) rotate(3.6deg);
-    transform: translateX(-15px) rotate(3.6deg);
-  }
-  60% {
-    -webkit-transform: translateX(9px) rotate(-2.4deg);
-    transform: translateX(9px) rotate(-2.4deg);
-  }
-  75% {
-    -webkit-transform: translateX(-6px) rotate(1.2deg);
-    transform: translateX(-6px) rotate(1.2deg);
-  }
-}
-
-@keyframes wobble-hor-top {
-  0%,
-  100% {
-    -webkit-transform: translateX(0%);
-    transform: translateX(0%);
-    -webkit-transform-origin: 50% 50%;
-    transform-origin: 50% 50%;
-  }
-  15% {
-    -webkit-transform: translateX(-30px) rotate(6deg);
-    transform: translateX(-30px) rotate(6deg);
-  }
-  30% {
-    -webkit-transform: translateX(15px) rotate(-6deg);
-    transform: translateX(15px) rotate(-6deg);
-  }
-  45% {
-    -webkit-transform: translateX(-15px) rotate(3.6deg);
-    transform: translateX(-15px) rotate(3.6deg);
-  }
-  60% {
-    -webkit-transform: translateX(9px) rotate(-2.4deg);
-    transform: translateX(9px) rotate(-2.4deg);
-  }
-  75% {
-    -webkit-transform: translateX(-6px) rotate(1.2deg);
-    transform: translateX(-6px) rotate(1.2deg);
   }
 }
