--- a/css/styles.css
+++ b/css/styles.css
@@ -55,16 +55,45 @@ body {
 header {
   display: flex;
   justify-content: space-between;
-  margin: 0 1em;
+  margin: 0 1.5em;
 }
 
 footer {
-  align-self: flex-start;
-  bottom: 1.6em;
+  bottom: 1em;
   line-height: 1;
-  margin: 0 1em 0.8em;
+  margin: 0px 1.5em 0.5em;
   position: sticky;
   z-index: 200;
+  display: flex;
+  justify-content: space-between;
+}
+
+.ingles {
+  display: inline-block;
+  position: relative;
+}
+
+.ingles::after {
+  content: "";
+  transition: opacity 0.2s ease;
+  opacity: 0;
+}
+
+.ingles:hover::after {
+  background: black;
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transform: skew(15deg);
+  opacity: 1;
+}
+
+.ingles:hover {
+  color: var(--blanco);
 }
 
 /* .main-home #main-cursor {
@@ -78,6 +107,7 @@ footer {
   pointer-events: none;
   position: absolute;
   border-radius: 50%;
+  /* mix-blend-mode: darken; */
 }
 
 #main-cursor {
@@ -93,10 +123,6 @@ footer {
   font-size: 3rem;
   display: none;
   transition: color 0.1s ease-in;
-}
-
-.over-photo {
-  color: var(--blanco);
 }
 
 #follow-cursor {
@@ -156,7 +182,7 @@ a {
   top: 0;
   left: 0;
   z-index: -1;
-  transform: skew(-9deg);
+  transform: skew(-15deg);
   opacity: 1;
 }
 
@@ -200,7 +226,7 @@ a {
 }
 
 main:not(.main-catalogo) {
-  margin: 1em 2em;
+  margin: 1em 2.5em;
   padding: 0;
 }
 
@@ -312,7 +338,7 @@ button {
 }
 
 .grilla-fotos {
-  padding: 4em 8em;
+  padding: 4em 9em;
   display: grid;
   column-gap: 2rem;
   row-gap: 2rem;
@@ -322,6 +348,15 @@ button {
   grid-template-columns: repeat(auto-fill, minmax(min(10rem, 100%), 1fr));
   -webkit-animation: fade-in 1.5s cubic-bezier(0.39, 0.575, 0.565, 1) both;
   animation: fade-in 1.5s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+}
+
+@media (orientation: portrait) {
+  .grilla-fotos {
+    padding: 4em 4em;
+  }
+  footer {
+    margin: 0px 0.5em 0.5em;
+  }
 }
 
 .foto {
@@ -352,7 +387,7 @@ button {
 } */
 
 .shrug {
-  font-size: 1.4em;
+  font-size: 1.2em;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   color: black;
   padding: 20px 0;
@@ -432,8 +467,17 @@ button {
   align-items: center;
   column-gap: 2rem;
   flex-grow: 2;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 2fr 3fr;
   padding: 0 16px;
+}
+
+#bio {
+  text-align: left;
+}
+
+#bio a:hover {
+  text-decoration: underline 2px;
+  text-underline-offset: 5px;
 }
 
 .foto-bio {
@@ -442,8 +486,7 @@ button {
 }
 
 .main-info img {
-  height: auto;
-  max-width: 60%;
+  max-width: 50%;
 }
 
 #mail {
