--- a/css/styles.css
+++ b/css/styles.css
@@ -106,33 +106,26 @@ footer {
   color: var(--blanco);
 }
 
-#main-cursor,
+/* #main-cursor,
 #follow-cursor {
   background-color: var(--rojo);
   border-radius: 50%;
   display: none;
-  mix-blend-mode: darken;
+  mix-blend-mode: overlay;
   pointer-events: none;
   position: absolute;
   z-index: 250;
-}
+} */
 
-#main-cursor {
+/* #main-cursor {
   height: 7px;
   width: 7px;
-}
-
-@media screen and (min-width: 480px) {
-  #main-cursor,
-  #follow-cursor {
-    display: block;
-  }
-}
+} */
 
 .flecha {
   color: black;
   display: none;
-  font-size: 2.5rem;
+  font-size: 2rem;
   pointer-events: none;
   position: absolute;
   transition: color 0.1s ease-in;
@@ -148,20 +141,34 @@ footer {
   width: 20px;
 }
 
-.main-catalogo #main-cursor {
+/* .main-catalogo */
+#main-cursor {
+  display: none;
+  mix-blend-mode: normal;
+  pointer-events: none;
+  position: absolute;
+  z-index: 250;
+
   background-color: transparent;
   border-bottom: 10px solid transparent;
   border-radius: 0%;
   border-right: 20px solid var(--amarillo);
   border-top: 10px solid transparent;
   height: 0;
-  mix-blend-mode: normal;
   transform: rotate(55deg);
   transition: opacity 0.2s ease-in-out;
   width: 0;
 }
 
-.main-catalogo #follow-cursor {
+@media screen and (min-width: 480px) {
+  #main-cursor,
+  #follow-cursor {
+    display: block;
+  }
+}
+
+/* .main-catalogo */
+#follow-cursor {
   display: none;
 }
 
@@ -233,14 +240,17 @@ a {
   animation: tiembla 0.5s ease-out 0s 1 normal forwards;
 }
 
-main:not(.main-catalogo) {
+.main-info {
   margin: 1em 1.5em;
   padding: 0;
 }
 
 @media screen and (min-width: 480px) {
-  main:not(.main-catalogo) {
+  .main-info {
     margin: 1em 2.5em;
+  }
+  .main-home {
+    margin: 1em 10px;
   }
 }
 
@@ -253,14 +263,19 @@ main:not(.main-catalogo) {
     flex-grow: 2;
     display: grid;
     gap: 1em;
-    grid-template-columns: 1fr 2fr 2fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr;
+    max-height: 100%;
   }
 }
 
 .home-photo {
   display: none;
 }
+
+/* .home-photo img {
+  border-radius: 10px;
+} */
 
 @media screen and (min-width: 480px) {
   .home-photo {
@@ -270,28 +285,42 @@ main:not(.main-catalogo) {
 
 .home-photo:nth-child(1) {
   align-self: center;
-  grid-column: 1/3;
   justify-self: center;
+  grid-column: 1/1;
+  grid-row: 1/1;
 }
 
 .home-photo:nth-child(2) {
-  align-self: baseline;
-  justify-self: baseline;
+  align-self: center;
+  justify-self: center;
+  grid-column: 2/4;
+  grid-row: 1/3;
 }
 
 .home-photo:nth-child(3) {
-  align-self: center;
-  justify-self: end;
+  align-self: end;
+  justify-self: center;
+  grid-column: 4/6;
+  grid-row: 1/1;
 }
 
 .home-photo:nth-child(4) {
-  align-self: baseline;
-  justify-self: end;
+  align-self: center;
+  justify-self: center;
+  grid-column: 1/3;
+  grid-row: 2/2;
 }
 
 .home-photo:nth-child(5) {
   align-self: end;
   justify-self: end;
+  grid-row: 2/2;
+}
+
+.home-photo:nth-child(6) {
+  align-self: end;
+  justify-self: end;
+  grid-row: 2/2;
 }
 
 .main-catalogo {
@@ -469,9 +498,9 @@ button {
 
 #carousel-close {
   background: url(../close-carousel.svg) center no-repeat;
-  background-size: 1.5rem;
+  background-size: 1.3rem;
   cursor: pointer;
-  height: 1.5rem;
+  height: 1.3rem;
   margin: 0.5em;
   padding: 1rem;
   position: absolute;
@@ -542,12 +571,12 @@ button {
 }
 
 .main-info img {
-  max-width: 100%;
+  max-width: 80%;
 }
 
 @media screen and (min-width: 480px) {
   .main-info img {
-    max-width: 50%;
+    max-width: 40%;
   }
 }
 
