--- a/css/styles.css
+++ b/css/styles.css
@@ -156,7 +156,6 @@ footer {
   border-top: 10px solid transparent;
   height: 0;
   transform: rotate(55deg);
-  transition: opacity 0.2s ease-in-out;
   width: 0;
 }
 
@@ -232,8 +231,8 @@ a {
 
 .body-home img {
   cursor: grab;
-  max-height: 15em;
-  max-width: 15em;
+  max-height: 16em;
+  max-width: 16em;
 }
 
 .tiembla:hover {
@@ -250,7 +249,7 @@ a {
     margin: 1em 2.5em;
   }
   .main-home {
-    margin: 1em 10px;
+    margin: 10px;
   }
 }
 
@@ -263,8 +262,8 @@ a {
     flex-grow: 2;
     display: grid;
     gap: 1em;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(4, 1fr);
     max-height: 100%;
   }
 }
@@ -286,41 +285,36 @@ a {
 .home-photo:nth-child(1) {
   align-self: center;
   justify-self: center;
-  grid-column: 1/1;
-  grid-row: 1/1;
-}
-
-.home-photo:nth-child(2) {
-  align-self: center;
-  justify-self: center;
-  grid-column: 2/4;
+  grid-column: 1/3;
   grid-row: 1/3;
 }
 
-.home-photo:nth-child(3) {
-  align-self: end;
+.home-photo:nth-child(2) {
+  align-self: start;
   justify-self: center;
-  grid-column: 4/6;
-  grid-row: 1/1;
+  grid-column: 3/5;
+  grid-row: 2/4;
+}
+
+.home-photo:nth-child(3) {
+  align-self: start;
+  justify-self: start;
+  grid-column: 5/7;
+  grid-row: 1/3;
 }
 
 .home-photo:nth-child(4) {
-  align-self: center;
-  justify-self: center;
+  align-self: start;
+  justify-self: end;
   grid-column: 1/3;
-  grid-row: 2/2;
+  grid-row: 3/5;
 }
 
 .home-photo:nth-child(5) {
-  align-self: end;
-  justify-self: end;
-  grid-row: 2/2;
-}
-
-.home-photo:nth-child(6) {
-  align-self: end;
-  justify-self: end;
-  grid-row: 2/2;
+  align-self: center;
+  justify-self: center;
+  grid-column: 5/7;
+  grid-row: 3/5;
 }
 
 .main-catalogo {
@@ -346,7 +340,7 @@ a {
 
 @media screen and (min-width: 480px) {
   .filters-list {
-    column-gap: 1rem;
+    column-gap: 0.4rem;
     padding: 1em 0;
   }
 }
@@ -363,7 +357,7 @@ a {
   .filters-nav {
     display: grid;
     align-items: center;
-    grid-template-columns: 1fr 3fr 1fr;
+    grid-template-columns: 1fr 4fr 1fr;
     width: 100%;
   }
 }
@@ -393,9 +387,10 @@ a {
 
 .filter {
   border-radius: 40px;
-  cursor: none;
+  cursor: pointer;
   padding: 0.6em 1em;
-  transition: background-color 0.2s ease, color 0.2s ease;
+  transition: background-color 0.1s ease, color 0.1s ease;
+  margin: 0.2em 0;
 }
 
 .filter:hover:not(.current) {
