--- a/css/styles.css
+++ b/css/styles.css
@@ -316,6 +316,10 @@ a {
   padding: 1em 2em;
 }
 
+.tags:hover {
+  box-shadow: 5px 5px black;
+}
+
 .active {
   padding-bottom: 2em;
   margin: 0 3em;
