--- a/css/styles.css
+++ b/css/styles.css
@@ -214,8 +214,7 @@ a {
 
 .video-wrapper {
   display: block;
-  height: 100%;
-  width: 100%;
+  height: 87vh;
   overflow: hidden;
 }
 
@@ -228,9 +227,10 @@ a {
 .main-home video {
   pointer-events: none;
   display: block;
+
   height: 100%;
   width: 100%;
-  object-fit: contain;
+  object-fit: cover;
 
   /* max-height: 100%;
   position: absolute;
