--- a/css/styles.css
+++ b/css/styles.css
@@ -213,7 +213,7 @@ a {
 
 .video-wrapper {
   display: block;
-  height: 87vh;
+  height: 84vh;
   overflow: hidden;
 }
 
@@ -230,7 +230,6 @@ a {
   height: 100%;
   width: 100%;
   object-fit: cover;
-
   z-index: 3;
   /* max-height: 100%;
   position: absolute;
@@ -261,6 +260,7 @@ a {
   display: block;
   flex-grow: 2;
   margin: 0 1.5em;
+  background: no-repeat center/9% url(/images/loading.gif);
 }
 
 @media screen and (min-width: 480px) {
@@ -271,6 +271,7 @@ a {
     grid-template-rows: repeat(4, 1fr);
     margin: 10px;
     max-height: 100%;
+    background: transparent;
   }
 }
 
@@ -565,6 +566,7 @@ button {
   height: 100%;
   justify-content: center;
   width: auto;
+  background: no-repeat center/9% url(/images/loading.gif);
 }
 
 #carousel button {
